[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["LilDrugHill <smookigrow@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
ipython = "8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"